* Fixed problems with "Retrieve Similar Artists" feature in combination   with SQLite, which could lead to 100% CPU usage.

Everyone please enable the Retrieve Similar Artists feature and test this! For me it solves the locking issues with SQLite, but it also seems to have a somewhat negative performance impact, with lots of HDD activity on trackchange.

BUG: 104447


svn path=/trunk/extragear/multimedia/amarok/; revision=469832